examples/test/testpolicy18731.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18731
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key47: value14
      key31: value14
      key39: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value29
          key31: value9
          key48: value16
      podSelector:
        matchLabels:
          key23: value27
          key0: value49
